--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,18 +2,19 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+ 
 }
-
 :root {
   /* Color */
   --base-color: #f4fafa;
   --primary-color: #00aeb1;
-  --text-color: #1f2929;
   --secondary-color: #587bc2;
-  --tertiary-color: #D07711;
   --accent-color: #91affb;
+  --tertiary-color: #d07711;
+  --text-color: #1f2929;
+  --bgtransparent: transparent;
+  --blend-mode:  difference;
 
-  
   /* --gradient: linear-gradient(35deg, rgba(27,226,197,1) 0%, rgba(70,221,227,1) 46%, rgba(0,202,255,1) 100%);
   --gradient-support: -webkit-linear-gradient(0deg, var(--tertiary-color) 0%,  var(--cyan-color) 100%) */
 
@@ -34,25 +35,28 @@
   --transition: 0.1s all ease-in-out;
 }
 body {
-  background-color: white;
-  height: 300vh;
+  background-color: var(--base-color);
+  scroll-behavior: smooth;
 }
 
-.navbar{
+
+.navbar {
   padding-inline: 2em;
 }
 
-
+.transition-nav-bg {
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+}
+.animate {
+  animation: fadeIn 0.3s; /* Animation class */
+}
 .navbar-brand {
-  font-weight: 500;
-  color: var(--text-color);
   font-size: var(--font-size-logo);
   transition: var(--transition);
 }
 
-
 .navbar .login-btn {
-  background-color: var(--secondary-color);
+  background-color: var(--primary-color);
   color: var(--base-color);
   font-size: var(--font-size);
   padding: var(--padding-btn);
@@ -61,36 +65,43 @@ body {
   transition: var(--btn-transition);
   margin-right: 10px;
 }
-
 .navbar .login-btn:hover {
   background: var(--btn-hover-bgcolor);
 }
-
 .navbar .login-btn:active {
   background: var(--btn-active-bgcolor);
 }
-
-
 .navbar .navbar-toggler {
   border: none;
   outline: none;
 }
-
 .navbar .navbar-toggler:focus,
 .navbar .btn-close:focus {
   outline: none;
   box-shadow: none;
 }
-
 .navbar .nav-link {
-  color: var(--color-gray);
-  font-weight: 500;
   position: relative;
 }
 
-.navbar .nav-link:hover,
-.navbar .nav-link.active {
+.navbar .nav-link.active{
+  font-weight: 500;
+}
+.navbar .nav-link.active::before {
   color: var(--secondary-color);
+  width: 20%;
+}
+.dropdown-item {
+  position: relative;
+}
+.dropdown-item.active::before {
+  width: 7%;
+}
+.dropdown-item.active {
+  background-color: var(--bgtransparent);
+}
+.dropdown-item:active {
+  background-color: var(--accent-color);
 }
 @media screen and (min-width: 992px) {
   .navbar .nav-link::before {
@@ -100,70 +111,179 @@ body {
     left: 50%;
     transform: translateX(-50%);
     width: 0;
-    height: 2px;
-    background-color: var(--tertiary-color);
+    height: 3px;
+    background-color: var(--accent-color);
     transition: var(--transition);
   }
-
+  .dropdown-item::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 10%;
+    width: 0;
+    height: 3px;
+    background-color: var(--accent-color);
+    transition: var(--transition);
+  }
   .navbar .nav-link:hover::before,
   .navbar .nav-link:active::before {
+    width: 80%;
+  }
+  .dropdown-item:hover::before {
+    width: 30%;
+  }
+}
+.dropdown-toggle::after {
+  transition: var(--transition);
+}
+.dropdown-toggle.show::after {
+  transform: rotate(-180deg);
+}
+.dropdown-menu {
+  border-radius: 0;
+}
+
+.main .parallax {
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
     width: 100%;
+    height: 100%;
+    object-fit: cover;
+
+}
+ .card-image-wrapper .parallax:nth-of-type(1){
+  background-image: url("https://scontent.fmnl17-5.fna.fbcdn.net/v/t39.30808-6/434153725_418168464136118_8081398989865437553_n.png?_nc_cat=108&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeE1Mn-PuQOFDwa4QF8eZ1BORxM6Qx_ehtpHEzpDH96G2mpp1ivREWNfStz9CKT6rH0ApT8Dnpy6CZ5scqBJxKBQ&_nc_ohc=gKXUdXVcYuEQ7kNvgFk9zlY&_nc_zt=23&_nc_ht=scontent.fmnl17-5.fna&_nc_gid=AXZiawigUmi__PB40yJB4t0&oh=00_AYAU7xJfQyoOG13iGGZUvcu3csS6hxrr95UCNC3fWgnE1g&oe=672A14B5");
+}
+.card-image-wrapper .parallax:nth-of-type(2){
+  background-image: url("https://scontent.fmnl17-4.fna.fbcdn.net/v/t39.30808-6/366705873_290933783523314_7326540913198168877_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=127cfc&_nc_eui2=AeFCvrgY5HYqbVtHF9XF97e6x2GfOgtDtJjHYZ86C0O0mIs10KT8PcjihxyOLUstjWEQcTN3wqidKXNHSXJWt3dl&_nc_ohc=O7yRCJL42MkQ7kNvgGAUD3O&_nc_zt=23&_nc_ht=scontent.fmnl17-4.fna&_nc_gid=A6VRv6xiMj5QVQdMd9o77Io&oh=00_AYCK8u4_ZIoAyFqiEH441ImxGhrRHPS9zQ0FcYxq_NpH0A&oe=672A2566");
+}
+.content {
+  height: 500px;
+  background-color: inherit;
+  text-align: center;
+  padding: 50px;
+}
+
+ .marquee {
+  width: 100%;
+  padding-top: 10em;
+  margin: 0 auto;
+  white-space: nowrap;
+  overflow: hidden;
+  height: 80vh;
+}
+.marquee span {
+  font-family: "Anton", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+  color: var(--secondary-color);
+  font-size: calc(8vw + 3em);
+  text-transform: uppercase;
+  display: inline-block;
+  padding-left: -10%;
+  animation: marquee-animation 50s linear infinite;
+}
+
+/* .scrollEffect{
+  animation: scrollReveal ease-in-out both;
+  animation-timeline: view();
+  animation-range: entry 20% cover 50%;
+} */
+
+/* p.p {
+  padding:0 20vw;
+  text-align: center;
+}
+
+#box1{
+  position: relative;
+  background: #71C9CE;
+  height: 25vh;
+  z-index:-999;
+}
+#box2{
+  position: relative;
+  background: #A6E3E9;
+  height: 25vh;
+  z-index:2;
+}
+#box3{
+  position: relative;
+  background: #CBF1F5;
+  height: 25vh;
+  z-index:3;
+}
+#box4{
+  position: relative;
+  background: #E3FDFD;
+  z-index:4;
+ 
+} */
+
+
+
+.home{
+  will-change: transform;
+  height: max-content;
+  width: 100%;
+  position: fixed;
+  top: 0;
+}
+.home .contents{
+  overflow: hidden;
+  height: 700px;
+  & .card-image-wrapper{
+    height: 135%;
+    will-change: transform;
   }
 }
 
- .drop-down-menu{
-  background-color: var(--primary-color);
+.gallery{
+  position: fixed;
 
-}
-
-.dropdown-toggle::after{
-  transition: var(--transition);
-}
-
-.dropdown-toggle.show::after{
-  transform: rotate(180deg);
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(2,1fr);
+  gap: 0.25rem;
+  padding: 0.25rem;
+  will-change: transform;
 }
 
-.dropdown-item:active{
-  color: var(--secondary-color);
-  background-color: var(--primary-color);
-  font-weight: 500;
-}
-.container-sm{
-  background-color: transparent;
-  padding: 3em 10em;
-  height: 500px;
-}
-.row{
-  display: flex;
-  gap: 2em;
-  margin-bottom: 2em;
-  height: 50%;
-}
-.row .col{
-  backdrop-filter: blur(5px);
-  box-shadow: -1px 16px 39px 0px rgba(110,110,110,0.75);
-  -webkit-box-shadow: -1px 16px 39px 0px rgba(110,110,110,0.75);
-  -moz-box-shadow: -1px 16px 39px 0px rgba(110,110,110,0.75);
-  border-radius: 5px;
-}
-.row:first-of-type .col:first-of-type{
-  background-color: var(--base-color);
-}
 
-.row:first-of-type .col:nth-of-type(2){
-  background-color: var(--primary-color);
-}
 
-.row:first-of-type .col:nth-of-type(3){
-  background-color: var(--secondary-color);
+
+.gallery .cards {
+  height: 400px;
+  overflow: hidden;
+
+  & .card-image-wrapper {
+    height: 135%;
+    will-change: transform;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+} 
+
+
+
+@keyframes marquee-animation {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(-100%, 0);
+  }
 }
-.row:last-of-type .col:nth-of-type(1){
-  background-color: var(--accent-color);
-}
-.row:last-of-type .col:nth-of-type(2){
-  background-color: var(--tertiary-color);
-}
-.row:last-of-type .col:nth-of-type(3){
-  background-color: var(--text-color);
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
