--- a/CSS/user-auth.css
+++ b/CSS/user-auth.css
@@ -1,4 +1,4 @@
-*{
+/* *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -12,7 +12,7 @@ body{
     background-color: rgb(39, 107, 255);
     flex-direction: column;
     gap: 10em;
- 
+    overflow: auto;
 }
 .container{
     padding: .5em 2.5em 3.5em 2.5em;
@@ -24,22 +24,7 @@ body{
     width: max-content;
     
 }
-.errors{
-    padding: .7em 1em ;
-    height: fit-content;
-    background-color: rgb(255, 212, 212);
-    border-radius: 5px;
-    border: 1px solid rgb(241, 181, 181);
-    margin-bottom: 10px;
-}
-.success{
-    padding: 1em 1em ;
-    height: fit-content;
-    background-color: rgb(191, 255, 175);
-    border-radius: 5px;
-    border: 1px solid rgb(140, 252, 140);
-    margin-bottom: 10px;
-}
+
 .container h1{
     margin: .7em 0 .5em 0;
 }
@@ -126,4 +111,498 @@ body{
 #login-btn a, #register-btn a{
     text-decoration: none;
     color: blue;
+}
+
+.auth-container h1 {
+    margin-top: .5em;
+    text-wrap: nowrap;
+}
+.auth-container .form input[type="submit"] {
+    margin-bottom: 0;
+    margin-top: 1em;
+}
+.auth-container .form #inputs input[type="email"] {
+    border: 1px solid rgb(164, 164, 165);
+    border-radius: 5px;
+}
+ .a {
+    font-size: 20px;
+    text-decoration: none;
+    color: black;
+    padding-block: .5em;
+    font-weight: bold;
+    width: fit-content;
+}
+
+ .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+} */
+
+
+.errors{
+    padding: .7em 1em ;
+    height: fit-content;
+    background-color: rgb(255, 212, 212);
+    border-radius: 5px;
+    border: 1px solid rgb(241, 181, 181);
+    margin-bottom: 10px;
+}
+.success{
+    padding: 1em 1em ;
+    height: fit-content;
+    background-color: rgb(191, 255, 175);
+    border-radius: 5px;
+    border: 1px solid rgb(140, 252, 140);
+    margin-bottom: 10px;
+}
+
+/*
+
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    background: #f6f5f7;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: -20px 0 50px;
+		margin-top: 20px;
+}
+
+
+
+h1 {
+    font-weight: bold;
+    margin: 0;
+    margin-bottom: 2em;
+}
+
+p {
+    font-size: 14px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: .5px;
+    margin: 20px 0 30px;
+}
+
+span {
+    font-size: 12px;
+}
+
+a {
+    color: #333;
+    font-size: 14px;
+    text-decoration: none;
+    margin: 15px 0;
+}
+
+.container {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, .2), 0 10px 10px rgba(0, 0, 0, .2);
+    position: relative;
+    overflow: hidden;
+    width: 100vw;
+    max-width: 100%;
+    height: 100vh;
+}
+
+.form-container form {
+    background: #fff;
+    display: flex;
+    flex-direction: column;
+    padding:  0 50px;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.social-container {
+    margin: 20px 0;
+}
+
+.social-container a {
+    border: 1px solid #ddd;
+    border-radius: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 5px;
+    height: 40px;
+    width: 40px;
+}
+
+.form-container input {
+    background: #eee;
+    border: none;
+    padding: 12px 15px;
+    margin: 8px 0;
+    width: 100%;
+}
+
+button {
+    border-radius: 20px;
+    border: 1px solid #ff4b2b;
+    background: #ff445c;
+    color: #fff;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    transition: transform 80ms ease-in;
+}
+
+button:active {
+    transform: scale(.95);
+}
+
+button:focus {
+    outline: none;
+}
+
+button.ghost {
+    background: transparent;
+    border-color: #fff;
+}
+
+.form-container {
+    position: absolute;
+    top: 0;
+    height: 100%;
+    transition: all .6s ease-in-out;
+}
+
+.sign-in-container {
+    left: 0;
+    width: 50%;
+    z-index: 2;
+}
+
+.sign-up-container {
+    left: 0;
+    width: 50%;
+    z-index: 1;
+    opacity: 0;
+}
+
+.overlay-container {
+    position: absolute;
+    top: 0;
+    left: 50%;
+    width: 50%;
+    height: 100%;
+    overflow: hidden;
+    transition: transform .6s ease-in-out;
+    z-index: 100;
+}
+
+.overlay {
+    background: #ff416c;
+    background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
+    color: #fff;
+    position: relative;
+    left: -100%;
+    height: 100%;
+    width: 200%;
+    transform: translateY(0);
+    transition: transform .6s ease-in-out;
+}
+
+.overlay-panel {
+    position: absolute;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 40px;
+    height: 100%;
+    width: 50%;
+    text-align: center;
+    transform: translateY(0);
+    transition: transform .6s ease-in-out;
+}
+
+.overlay-right {
+    right: 0;
+    transform: translateY(0);
+}
+
+.overlay-left {
+    transform: translateY(-20%);
+}
+
+.container.right-panel-active .sign-in-container {
+    transform: translateY(100%);
+}
+
+.container.right-panel-active .overlay-container {
+    transform: translateX(-100%);
+}
+
+.container.right-panel-active .sign-up-container {
+    transform: translateX(100%);
+    opacity: 1;
+    z-index: 5;
+}
+
+.container.right-panel-active .overlay {
+    transform: translateX(50%);
+}
+
+.container.right-panel-active .overlay-left {
+    transform: translateY(0);
+}
+
+.container.right-panel-active .overlay-right {
+    transform: translateY(20%);
+}
+ */
+
+
+ :root {
+    /* Color */
+    --base-color: #eefcfc;
+    --primary-color: #00a7a7;
+    --secondary-color: #6abebe;
+    --accent-color: #92b568;
+    --tertiary-color: #b7dba1;
+    --text-color: #1f2929;
+    --gray-color: #dae2e2;
+    --bgtransparent: transparent;
+    --blend-mode: difference;
+    --bg-color: #f9f9f9;
+  
+    --d: 1000ms;
+    --e: cubic-bezier(0.19, 1, 0.22, 1);
+    --font-sans: "Rounded Elegance", sans-serif;
+    --font-serif: "Marion", serif;
+  
+    /* Transition */
+    --transition: 0.1s all ease-in-out;
+  
+    /* Quotes Animation */
+    --quotes-slider-width: 1100px;
+    --quotes-slider-height: 300px;
+    --quotes-animation-duration: 25s;
+    --quotes-animation-delay: 5s;
+  }
+
+  
+body {
+  font-family: 'Arial', sans-serif;
+  margin: 0;
+  padding: 0;
+  background: var(--base-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.container {
+  background: var(--base-color);
+  border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+  position: relative;
+  width: 900px;
+  max-width: 100%;
+  min-height: 680px;
+   overflow: hidden;
+  max-height: max-content;
+}
+
+.form-container {
+  position: absolute;
+  top: 0;
+  
+  height: 100%;
+  transition: all 0.6s ease-in-out;
+  padding: 2em 0;
+}
+
+.sign-up-container {
+  left: 0;
+  width: 50%;
+  z-index: 1;
+  opacity: 0;
+  transform: translateX(100%);
+}
+
+.sign-in-container {
+  left: 0;
+  width: 50%;
+  z-index: 2;
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.container.right-panel-active .sign-up-container {
+  transform: translateX(0);
+  opacity: 1;
+  z-index: 2;
+}
+
+.container.right-panel-active .sign-in-container {
+  transform: translateX(-100%);
+  opacity: 0;
+  z-index: 1;
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+.overlay {
+  background: linear-gradient(to right, var(--secondary-color), #3eb5b5);
+  color: var(--base-color);
+  position: absolute;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  transform: translateX(0);
+  transition: transform 0.6s ease-in-out;
+}
+
+.container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-panel {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 40px;
+  text-align: center;
+  height: 100%;
+  width: 50%;
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(5%);
+}
+
+.container.right-panel-active .overlay-right {
+  transform: translateX(0);
+}
+
+h1 {
+  font-weight: bold;
+  margin: 0;
+}
+
+form {
+  background: var(--base-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+input {
+  border: 1px solid var(--bg-color);
+  margin: 8px 0;
+  padding: 12px;
+  width: 100%;
+  border-radius: 4px;
+}
+
+input[type="submit"] {
+  border: none;
+  padding: 12px 30px;
+  background-color: var(--secondary-color);
+  color: var(--base-color);
+  font-size: 14px;
+  border-radius: 20px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+input[type="submit"]:hover {
+  background-color: var(--secondary-color);
+}
+
+.errors {
+  color: var(--secondary-color);
+  font-size: 12px;
+  margin-bottom: 8px;
+}
+
+button.ghost {
+  border: 2px solid var(--base-color);
+  background: none;
+  color: var(--base-color);
+  border-radius: 20px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 12px;
+  transition: all 0.3s ease;
+}
+
+button.ghost:hover {
+  background-color: var(--base-color);
+  color: var(--secondary-color);
+}
+
+#register-form{
+    
+    overflow-y: auto;
+    overflow-x: hidden;
+    height: 100%;
+}
+
+#register-form h1{
+    margin: 20px 0;
+}
+
+.form-grps{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin: 1em 0;
+}
+
+.checkbx{
+    display: flex;
+    text-wrap: nowrap;
+    align-items: center;
+    gap: .5em;
+}
+
+input[type="text"], input[type="password"], input[type="email"]{
+    background-color: var(--base-color);
+    border-bottom: 2px solid black;
+    border-radius: 0;
 }
