--- a/CSS/aboutpage.css
+++ b/CSS/aboutpage.css
@@ -60,10 +60,13 @@ body {
   margin-bottom: 3em;
 }
 
-.main video {
-  width: 100vw;
-  height: 100vh;
-  object-fit: cover;
+.main .img1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: contain;
   filter: brightness(80%);
 }
 
@@ -266,4 +269,11 @@ body {
 hr {
   width: 50%;
   margin: 2em 0 0 0;
+}
+
+@media only screen and (width < 105em) {
+  .s1 .img1 {
+    object-fit: cover;
+    margin: 0 auto;
+  }
 }
