--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -57,13 +57,10 @@ section {
   position: relative;
 }
 
-.s1 .img1 {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  object-fit: contain;
+.s1 video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   filter: brightness(80%);
 }
 
@@ -170,12 +167,7 @@ section {
   }
 }
 
-@media only screen and (width < 105em) {
-  .s1 .img1 {
-    object-fit: cover;
-    margin: 0 auto;
-  }
-}
+
 
 .button.black {
   border: 2px solid var(--text-color);
