--- a/CSS/style.css
+++ b/CSS/style.css
@@ -657,11 +657,11 @@ hr {
   margin: 0 auto;
 }
 
-body::-webkit-scrollbar {
+::-webkit-scrollbar {
   width: 0.95rem;
 }
 
-body::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
   height: 4rem;
   border-radius: 0.5rem;
   border: 4px solid transparent;
@@ -669,19 +669,19 @@ body::-webkit-scrollbar-thumb {
   background-color: var(--text-color);
   transition: all 1s ease;
 }
-body::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
   background-color: #585858;
 }
 
-body::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
   background: var(--base-color);
 }
 
-body::-webkit-scrollbar-track-piece:start {
+::-webkit-scrollbar-track-piece:start {
   background: transparent;
 }
 
-body::-webkit-scrollbar-track-piece:end {
+::-webkit-scrollbar-track-piece:end {
   background: transparent;
 }
 
