--- a/CSS/aboutpage.css
+++ b/CSS/aboutpage.css
@@ -37,6 +37,7 @@
   --quotes-animation-delay: 5s;
 }
 
+
 body {
   background-color: var(--bg-color);
   z-index: -2;
@@ -45,7 +46,7 @@ body {
 #container {
   position: relative;
   z-index: 9999;
-  width: 100dvw;
+  width: 100vw;
   border-radius: 30px;
   padding-bottom: 5em;
   margin-bottom: calc(23em + 21vh);
@@ -93,7 +94,6 @@ body {
   color: white;
   text-align: center;
   user-select: none;
-  width: 100%;
   padding-inline: 10px;
 }
 
@@ -132,7 +132,7 @@ body {
 }
 .about-sec {
   position: relative;
-  width: 100vw;
+  width: 100%;
   display: flex;
   flex-direction: column;
   margin-top: 20vh;
@@ -179,6 +179,9 @@ body {
     margin: 1em;
     margin-top: -7%;
     width: 100%;
+    margin-left: 0;
+    padding: .5em;
+
   }
   .about-sec .ukiyo {
     position: static;
@@ -204,7 +207,7 @@ body {
 }
 .main-box iframe {
   border-radius: 1em;
-  flex: 1.5;
+  max-width: 44em;  
   aspect-ratio: 2/1.3;
 }
 .main-box .par4 {
@@ -233,18 +236,23 @@ body {
   justify-content: center;
 }
 .abt-mission .ukiyo {
-  height: calc(45vh + 15em);
-  width: 40vw;
-  object-fit: cover;
-  margin-left: 2em;
+  
+  position: absolute;
+  top: 0;
+  left: 3%;
+  height: 100%;
+  height: 100%;
 }
 
-.abt-mission div:first-of-type {
-  width: 40% !important;
+.abt-mission .img{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+
 }
+
 
 .abt-mission .abt-div {
-  width: 55vw;
   padding: 1em 3em;
 }
 
@@ -276,4 +284,64 @@ hr {
     object-fit: cover;
     margin: 0 auto;
   }
+  
+}
+
+@media only screen and (width < 62.5em){
+  .main-box{
+    flex-direction: column;
+    gap: 1rem;  
+    margin-block: 2em;
+
+  padding: .5em;
+
+
+  }
+  .main-box iframe{
+    max-width: 80vw !important;
+  }
+
+  .abt-mission{
+    flex-direction: column;
+    margin-top: 5em;
+
+  }
+
+  .abt-mission .img{
+    width: 100%;
+  }
+
+  .abt-mission .ukiyo {
+    margin: 0;
+    width: 100%;
+    left: 0;
+  }
+  
+  
+  .abt-mission .abt-div {
+    padding: 1em !important;
+    width: 100% !important;
+  }
+  
+}
+@media only screen and (width < 79.5em){
+  
+  .main-box iframe{
+    max-width: 31.25em;
+  }
+
+
+  
+.abt-mission {
+ 
+  gap: 3em;
+
+}
+
+
+.abt-mission .abt-div {
+  padding: .5em;
+  flex: 1;
+}
+
 }
