--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -267,7 +267,6 @@ section {
   width: 100%;
   height: 110%;
   background-size: cover;
-  background-position: 0 0;
   transition: all calc(var(--d) * 1.5) var(--e);
   pointer-events: none;
   object-fit: contain;
@@ -314,16 +313,21 @@ section {
   transition: all calc(var(--d) * 2) var(--e);
 }
 .main-card:nth-child(1)::before {
-  background-image: url("../Images/bg3.jpg");
+  background-image: url("../Images/img26.jpg");
 }
 .main-card:nth-child(2)::before {
-  background-image: url("../Images/bg5.jpg");
+  background-image: url("../Images/img27.jpg");
+
 }
 .main-card:nth-child(3)::before {
-  background-image: url("../Images/bg6.jpg");
+  background-image: url("../Images/pol.jpg");
+  background-position: center;
+
 }
 .main-card:nth-child(4)::before {
-  background-image: url("../Images/bg7.jpg");
+  background-image: url("../Images/bg8.jpg");
+  background-position: bottom;
+
 }
 
 .card-content {
@@ -341,20 +345,25 @@ section {
 }
 
 .card-title {
-  font-size: 2.5rem;
+  font-family: var(--font-serif);
+  font-style: italic;
+  font-size: 4.5rem;
   font-weight: 300;
   line-height: 1.2;
 }
 
 .copy {
-  font-family: var(--font-serif);
   font-size: 1.5em;
-  font-style: italic;
   line-height: 1.1em;
 }
 
 .card-body.button {
   padding: 0.6em 1.3em;
+}
+
+.card-body a{
+  text-decoration: none;
+  color: white;
 }
 
 @media (hover: hover) and (min-width: 600px) {
@@ -363,7 +372,7 @@ section {
   }
 
   .card-content {
-    transform: translateY(calc(100% + 2em));
+    transform: translateY(calc(100%));
   }
 
   .main-card:hover,
@@ -380,7 +389,7 @@ section {
     }
   }
   .copy {
-    font-size: 2em;
+    font-size: 1.2em;
   }
 
   .main-card:hover:after,
