--- a/CSS/homepage.css
+++ b/CSS/homepage.css
@@ -267,7 +267,7 @@ section {
   width: 100%;
   height: 110%;
   background-size: cover;
-  background-position: 0 0;
+  background-position: center;
   transition: all calc(var(--d) * 1.5) var(--e);
   pointer-events: none;
   object-fit: contain;
