--- a/CSS/user-auth.css
+++ b/CSS/user-auth.css
@@ -1,145 +1,4 @@
-/* *{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: Helvetica, sans-serif;
-}
-body{
-    padding: 5em 0;
-    display: flex;
-    align-items: center;
-    height: 80vh;
-    background-color: rgb(39, 107, 255);
-    flex-direction: column;
-    gap: 10em;
-    overflow: auto;
-}
-.container{
-    padding: .5em 2.5em 3.5em 2.5em;
-    display: flex;
-    border-radius: 7px;
-    flex-direction: column;
-    column-gap: 2em;
-    background-color:white;
-    width: max-content;
-    
-}
 
-.container h1{
-    margin: .7em 0 .5em 0;
-}
-.container .form{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5em;
-    margin-top: 2em;
-}
-.form #inputs{
-    display: flex;
-    flex-direction: column;
-    gap: 1.5em;
-    
-}
-.form .seePasswordToggle{
-    position: relative;
- }
-.form .seePasswordToggle i {
-    display: none;
-    position: absolute;
-    right: 5%;
-    transform: translateX(50%);
-    top: 17px;
-    font-size: 1em;
-}
-.form input:not(:placeholder-shown) + i{
-    display: block;
-}
-.form #inputs input{
-    min-width: 25em;
-    width: 100%;
-    padding-block: .8em;
-    padding-inline: .6em;
-    border: 1px solid transparent;
-    border-bottom: 1px solid rgb(44, 44, 44);
-    background-color: transparent;
-    font-size: 16px;
-
-}
-.form #inputs input:active, .form #inputs input:focus, .form #inputs input:focus-visible {
-    border: 1px solid rgb(164, 164, 165);
-    outline-width: 0;
-    border-radius: 5px;
-}
-.conf{
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 1.5em;
-    align-items: center;
-}
-.conf label {
-    display: flex;
-    align-items: center;
-    gap: 7px;
-}
-.conf input{
-    margin-bottom: 2px;
-}
-.conf a{
-    font-size: 14px;
-    text-decoration: none;
-    color: blue;
-}
-.form input[type="submit"]{
-    padding-block: .6em;
-    padding-inline: .6em;
-    background-color: rgb(39, 107, 255);
-    color: white;
-    font-size: 16px;
-    border-radius: 5px;
-    border: 0;
-    font-weight: 500;
-    transition: all .2s;
-    margin-bottom: 3em;
-}
-
-.form input[type="submit"]:hover{
-    background-color: rgb(0, 81, 255);
-}
-.form input[type="submit"]:active{
-    background-color: rgb(96, 146, 255);
-}
-#login-btn a, #register-btn a{
-    text-decoration: none;
-    color: blue;
-}
-
-.auth-container h1 {
-    margin-top: .5em;
-    text-wrap: nowrap;
-}
-.auth-container .form input[type="submit"] {
-    margin-bottom: 0;
-    margin-top: 1em;
-}
-.auth-container .form #inputs input[type="email"] {
-    border: 1px solid rgb(164, 164, 165);
-    border-radius: 5px;
-}
- .a {
-    font-size: 20px;
-    text-decoration: none;
-    color: black;
-    padding-block: .5em;
-    font-weight: bold;
-    width: fit-content;
-}
-
- .header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 60%;
-} */
 
 .err{
     position: fixed;
@@ -176,216 +35,6 @@ body{
     color: white;
     font-size: .8em;
 }
-
-/*
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    font-family: 'Montserrat', sans-serif;
-    background: #f6f5f7;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: -20px 0 50px;
-		margin-top: 20px;
-}
-
-
-
-h1 {
-    font-weight: bold;
-    margin: 0;
-    margin-bottom: 2em;
-}
-
-p {
-    font-size: 14px;
-    font-weight: 100;
-    line-height: 20px;
-    letter-spacing: .5px;
-    margin: 20px 0 30px;
-}
-
-span {
-    font-size: 12px;
-}
-
-a {
-    color: #333;
-    font-size: 14px;
-    text-decoration: none;
-    margin: 15px 0;
-}
-
-.container {
-    background: #fff;
-    border-radius: 10px;
-    box-shadow: 0 14px 28px rgba(0, 0, 0, .2), 0 10px 10px rgba(0, 0, 0, .2);
-    position: relative;
-    overflow: hidden;
-    width: 100vw;
-    max-width: 100%;
-    height: 100vh;
-}
-
-.form-container form {
-    background: #fff;
-    display: flex;
-    flex-direction: column;
-    padding:  0 50px;
-    height: 100%;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
-
-.social-container {
-    margin: 20px 0;
-}
-
-.social-container a {
-    border: 1px solid #ddd;
-    border-radius: 50%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 5px;
-    height: 40px;
-    width: 40px;
-}
-
-.form-container input {
-    background: #eee;
-    border: none;
-    padding: 12px 15px;
-    margin: 8px 0;
-    width: 100%;
-}
-
-button {
-    border-radius: 20px;
-    border: 1px solid #ff4b2b;
-    background: #ff445c;
-    color: #fff;
-    font-size: 12px;
-    font-weight: bold;
-    padding: 12px 45px;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    transition: transform 80ms ease-in;
-}
-
-button:active {
-    transform: scale(.95);
-}
-
-button:focus {
-    outline: none;
-}
-
-button.ghost {
-    background: transparent;
-    border-color: #fff;
-}
-
-.form-container {
-    position: absolute;
-    top: 0;
-    height: 100%;
-    transition: all .6s ease-in-out;
-}
-
-.sign-in-container {
-    left: 0;
-    width: 50%;
-    z-index: 2;
-}
-
-.sign-up-container {
-    left: 0;
-    width: 50%;
-    z-index: 1;
-    opacity: 0;
-}
-
-.overlay-container {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    width: 50%;
-    height: 100%;
-    overflow: hidden;
-    transition: transform .6s ease-in-out;
-    z-index: 100;
-}
-
-.overlay {
-    background: #ff416c;
-    background: linear-gradient(to right, #ff4b2b, #ff416c) no-repeat 0 0 / cover;
-    color: #fff;
-    position: relative;
-    left: -100%;
-    height: 100%;
-    width: 200%;
-    transform: translateY(0);
-    transition: transform .6s ease-in-out;
-}
-
-.overlay-panel {
-    position: absolute;
-    top: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 40px;
-    height: 100%;
-    width: 50%;
-    text-align: center;
-    transform: translateY(0);
-    transition: transform .6s ease-in-out;
-}
-
-.overlay-right {
-    right: 0;
-    transform: translateY(0);
-}
-
-.overlay-left {
-    transform: translateY(-20%);
-}
-
-.container.right-panel-active .sign-in-container {
-    transform: translateY(100%);
-}
-
-.container.right-panel-active .overlay-container {
-    transform: translateX(-100%);
-}
-
-.container.right-panel-active .sign-up-container {
-    transform: translateX(100%);
-    opacity: 1;
-    z-index: 5;
-}
-
-.container.right-panel-active .overlay {
-    transform: translateX(50%);
-}
-
-.container.right-panel-active .overlay-left {
-    transform: translateY(0);
-}
-
-.container.right-panel-active .overlay-right {
-    transform: translateY(20%);
-}
- */
 
 
  :root {
@@ -441,6 +90,8 @@ body {
   max-height: max-content;
   position: relative;
 }
+
+
 
 .form-container {
   position: absolute;
@@ -646,4 +297,58 @@ input[type="text"], input[type="password"], input[type="email"]{
     color: var(--text-color);
     z-index: 99999;
     font-size: 1.5em;
+}
+
+
+.span{
+    display: none;
+}
+
+@media only screen and (width < 47em){
+    body{
+        display: block;
+    }
+    .container{
+        box-shadow: none;
+    }
+    .overlay-left{
+        display: none;
+    }
+
+    .overlay-right{
+        display: none;
+    }
+
+    .overlay-container{
+        display: none;
+    }
+
+    .sign-in-container{
+        width: 100%;
+    }
+    .sign-up-container{
+        width: 100%;
+    }
+
+    .span {
+        display: block;
+        padding: 1em;
+        padding-top: 0;
+        margin-top: -4em;
+    }
+
+    button.ghost {
+        border:none ;
+        background: none;
+        color: var(--primary-color);
+        cursor: pointer;
+        font-size: 1em;
+        transition: all 0.3s ease;
+        padding: 0;
+      }
+      
+      button.ghost:hover {
+        color: var(--secondary-color);
+        text-decoration: underline;
+      }
 }
