--- a/CSS/aboutpage.css
+++ b/CSS/aboutpage.css
@@ -71,6 +71,34 @@ body {
   filter: brightness(80%);
 }
 
+.contact-us{
+  font-size: 16px;
+  line-height: 1.5;
+  margin-bottom: 20px; 
+}
+.contact-info {
+  display: flex; 
+  align-items: center; 
+  margin-bottom: 10px; 
+  flex-wrap: wrap;
+}
+
+.contact-info img.email-icon {
+  height: 24px;
+  margin-right: 10px; 
+}
+
+.contact-info img.call-icon {
+  height: 19px;
+  margin-right: 10px; 
+}
+
+.contact-info p {
+  margin: 0; 
+  font-size: 16px;
+  word-break: break-word; 
+}
+
 .parallax-btn {
   border: 3px solid white;
   font-weight: 300;
