--- a/CSS/bookpage.css
+++ b/CSS/bookpage.css
@@ -880,20 +880,24 @@ input[type=number] {
 
 .modal1 {
   opacity: 0;
-  padding: 50px;
   position: absolute;
   z-index: 1100;
+  left: 0 !important;
+  transform: translate(-50% -50%) !important;
   -webkit-transition: opacity 600ms linear 600ms;
   -moz-transition: opacity 600ms linear 600ms;
   -ms-transition: opacity 600ms linear 600ms;
   -o-transition: opacity 600ms linear 600ms;
   transition: opacity 600ms linear 600ms;
+  width: 100% !important;
 }
 
 .modal_info {
   background: #FCF9F2;
-  padding: 50px 100px;
-  text-align: center;
+  padding: 2em 2em;
+  text-wrap: wrap;
+  width: fit-content;
+  word-wrap: break-word;
 }
 
 .modal_overlay {
@@ -922,13 +926,10 @@ input[type=number] {
 
 
 .open_button {
-  background: #363D4E;
   display: inline-block;
-  height: 66px;
   position: relative;
   vertical-align: middle;
   whitespace: normal;
-  width: 172px;
   z-index: 1;
   -webkit-transition: opacity 100ms linear;
   -moz-transition: opacity 100ms linear;
@@ -938,18 +939,17 @@ input[type=number] {
 }
 
 a.open_button {
-  color: #FFFFFF;
+  color: var(--text-color);
   letter-spacing: 2px;
-  line-height: 66px;
-  font-family: 'Helvetica', Arial, sans-serif;
+  padding: 0.9em .5em 1.1em .5em;
   font-size: 14px;
   font-weight: bold;
   text-decoration: none;
-  text-transform: uppercase;
 }
  
 a.open_button:hover {
-  background: #3E465A;
+  color: var(--primary-color);
+  text-decoration: underline;
 }
 
 a.open_button.load {
@@ -980,7 +980,7 @@ button.modal_close {
 }
 
 button.modal_close:hover {
-  background: #3E465A;
+  background: var(--gray-color);
   -webkit-transform: rotate(360deg) scale(1.10);
   -moz-transform: rotate(360deg) scale(1.10);
   -ms-transform: rotate(360deg) scale(1.10);
@@ -993,8 +993,8 @@ button.modal_close:hover {
   transition: transform 600ms;
 }
 
-button.modal_close .span, .span:before, .span:after {
-  background: #FFFFFF;
+button.modal_close .spans, .spans:before, .spans:after {
+  background: var(--primary-color);
   content: '';
   cursor: pointer;
   display: block;
@@ -1003,7 +1003,7 @@ button.modal_close .span, .span:before, .span:after {
   width: 20px;
 }
 
-button.modal_close .span:first-child {
+button.modal_close .spans:first-child {
   background: none;
   bottom: 0;
   left: 0;
@@ -1013,7 +1013,7 @@ button.modal_close .span:first-child {
   top: 0;
 }
 
-button.modal_close .span:before {
+button.modal_close .spans:before {
   -webkit-transform: rotate(45deg);
   -moz-transform: rotate(45deg);
   -ms-transform: rotate(45deg);
@@ -1021,11 +1021,58 @@ button.modal_close .span:before {
   transform: rotate(45deg);
 }
 
-button.modal_close .span:after {
+button.modal_close .spans:after {
   -webkit-transform: translateY(-2px) rotate(-45deg);
   -moz-transform: translateY(-2px) rotate(-45deg);
   -ms-transform: translateY(-2px) rotate(-45deg);
   -o-transform: translateY(-2px) rotate(-45deg);
   transform: translateY(-2px) rotate(-45deg);
   top: 2px;
+}
+
+.modal-body {
+  font-size: 14px;
+  line-height: 1.6;
+}
+
+.modal-body h4 {
+  margin-top: 20px;
+  font-size: 16px;
+  color: #333;
+}
+
+.modal-body ul {
+  padding-left: 20px;
+}
+
+.modal-body ul li {
+  margin-bottom: 10px;
+}
+
+.modal-footer {
+  text-align: right;
+  margin-top: 20px;
+}
+
+.close-btn {
+  background-color: #d9534f;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 14px;
+}
+
+.close-btn:hover {
+  background-color: #c9302c;
+}
+
+/* Utility Styles */
+.bold {
+  font-weight: bold;
+}
+
+.text-red {
+  color: #d9534f;
 }
