--- a/CSS/style.css
+++ b/CSS/style.css
@@ -728,15 +728,13 @@ hr {
   font-size: 1em;
 }
 .success{
-  padding: .7em 1em ;
+   padding: .7em 1em ;
   height: fit-content;
-  background-color: rgb(161, 255, 126);
+  background-color: rgb(255, 132, 132);
   border-radius: 5px;
-  border: 1px solid rgb(54, 255, 54);
+  border: 1px solid rgb(255, 25, 25);
   margin-bottom: 10px;
-  position: absolute;
-  top: 1em;
-  right: 1em;
+  width: fit-content;
   color: white;
   font-size: 1em;
 }
