--- a/CSS/offers.css
+++ b/CSS/offers.css
@@ -1,29 +1,42 @@
 :root {
-    /* Color */
-    --base-color: #eefcfc;
-    --primary-color: #00a7a7;
-    --secondary-color: #6abebe;
-    --accent-color: #92b568;
-    --tertiary-color: #b7dba1;
-    --text-color: #1f2929;
-    --gray-color: #dae2e2;
-    --bgtransparent: transparent;
-    --blend-mode: difference;
-  
-    --d: 1000ms;
-    --e: cubic-bezier(0.19, 1, 0.22, 1);
-    --font-sans: "Rounded Elegance", sans-serif;
-    --font-serif: "Marion", serif;
-  
-    /* Transition */
-    --transition: 0.1s all ease-in-out;
-  
-    /* Quotes Animation */
-    --quotes-slider-width: 1100px;
-    --quotes-slider-height: 300px;
-    --quotes-animation-duration: 25s;
-    --quotes-animation-delay: 5s;
-  }
+  /* Color */
+  --base-color: #fafaf3;
+  --primary-color: #00aeb1;
+  --secondary-color: #587bc2;
+  --accent-color: #91affb;
+  --tertiary-color: #d07711;
+  --text-color: #1f2929;
+  --bgtransparent: transparent;
+  --blend-mode: difference;
+  --bg-color: #f9f9f9;
+
+  --d: 1000ms;
+  --e: cubic-bezier(0.19, 1, 0.22, 1);
+  --font-sans: "Rubik", sans-serif;
+  --font-serif: "Cardo", serif;
+
+  /* Size */
+  --font-size-btn: 16px;
+  --font-size-logo: 24px;
+  --font-size-text: 22px;
+  --padding-btn: 8px 20px;
+
+  /* Buttons */
+  --btn-border-radius: 0px;
+  --btn-transition: 0.3s background;
+  --btn-hover-bgcolor: hsl(178, 82%, 44%);
+  --btn-active-bgcolor: hsl(178, 86%, 48%);
+
+  /* Transition */
+  --transition: 0.1s all ease-in-out;
+
+  /* Quotes Animation */
+  --quotes-slider-width: 1100px;
+  --quotes-slider-height: 300px;
+  --quotes-animation-duration: 25s;
+  --quotes-animation-delay: 5s;
+}
+
 
 *{
     padding: 0;
@@ -31,15 +44,85 @@
     box-sizing: border-box;
 }
 
-.main-sec{
-    display: flex;
-    flex-direction: column;
-    gap: 5em;
+#container {
+  position: relative;
+  z-index: 9999;
+  width: 100vw;
+  border-radius: 30px;
+  margin-bottom: calc(23em + 21vh);
+  background-color: var(--base-color);
 }
 
-.main-sec section{
-    display: flex;
-    gap: 5em;
+.main {
+  height: 100vh;
+  width: 100%;
+  position: relative;
+
+  margin-bottom: 3em;
+}
+
+.main .img1 {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  object-fit: contain;
+  filter: brightness(80%);
+}
+
+.parallax-btn {
+  border: 3px solid white;
+  font-weight: 300;
+}
+
+.contents-body {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-60%);
+  z-index: 9999;
+  width: 100%;
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+}
+.contents-title {
+  font-size: calc(3vw + 2.5rem);
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  user-select: none;
+  padding-inline: 10px;
+}
+
+.contents-p {
+  font-size: calc(1vw + 1rem);
+  font-weight: 400;
+  color: white;
+  line-height: 1.3em;
+  text-align: center;
+  user-select: none;
+  width: 50%;
+  padding-inline: 10px;
+  margin-bottom: 0.5em;
+}
+
+.company-name img {
+  width: calc(13vw + 10em);
+  color: var(--base-color);
+  text-transform: uppercase;
+  font-weight: bolder;
+  text-transform: capitalize;
+  font-family: "Bacalisties", sans-serif;
+  margin-bottom: 1em;
+}
+
+@media screen and (width < 50em) {
+  .contents-p {
+    width: 100%;
+  }
 }
 
 /* Container for both the image and content */
@@ -61,12 +144,16 @@
     display: flex;
     justify-content: center; /* Centers the image horizontally */
     align-items: center; /* Centers the image vertically */
+    padding-left: 20px;
 }
 
 /* Image styling */
 .resizable-img {
-    max-width: 100%; /* Ensures the image fits within the container */
+    max-width: 80%; /* Ensures the image fits within the container */ 
     height: auto; /* Keeps aspect ratio */
+    border-radius: 10px;
+    border: solid 2px var(--text-color);
+
 }
 
 /* Content container */
@@ -107,6 +194,10 @@
 
 .amenities-list strong {
     font-weight: bold;
+}
+
+#event li {
+  font-weight: bold;
 }
 
 /* Styling for the section titles */
@@ -167,6 +258,10 @@
     font-size: 1.5em;
     margin-bottom: 10px;
     color: #333;
+  }
+
+  .indent {
+    text-indent: 20px;
   }
   
   /* Responsive styling for mobile */
